Refactor to use List instead of Stack in tests